# shortify

./: Cargo.toml  LICENSE  README.md  wrangler.toml
src/: error.html  lib.rs
