[package]
name = "shortify"
version = "0.0.1"
edition = "2021"
authors = ["valkyrie_pilot <valk@randomairborne.dev>"]
description = "A cloudflare worker-powered pastebin!"
repository = "https://github.com/randomairborne/shortify"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = "0.0.12"
tera = { version = "1", default-features = false }
console_error_panic_hook = "0.1"
